loopfor.LoopStairs.scala.code
var finished : Boolean = false
while (finished!=true) {
  foward()
  forward()
  forward()
  if (isFacingWall()) {
    left()
    forward()
    right()
    forward()
  }
  else {
    forward()
    forward()
    forward()
    var finished : Boolean = true}
}